[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/font/doppio-one.regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_right = 479.0
margin_bottom = 72.0
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]placeholder[/center]"
text = "placeholder"

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 2.0
margin_top = 533.0
margin_right = 480.0
margin_bottom = 656.0
theme = ExtResource( 3 )
text = "Frames:
Current Postion:
Plane Position: "

[node name="died" type="RichTextLabel" parent="CanvasLayer"]
margin_left = -1.0
margin_top = 38.0
margin_right = 481.0
margin_bottom = 280.0
theme = ExtResource( 3 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]You Died[/center]"
text = "You Died"
scroll_active = false

[node name="retry" type="Button" parent="CanvasLayer"]
margin_left = 140.0
margin_top = 260.0
margin_right = 338.0
margin_bottom = 353.0
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.192157, 0.619608, 0.2, 1 )
custom_colors/font_color_pressed = Color( 0.388235, 0.388235, 0.388235, 1 )
enabled_focus_mode = 0
text = "Retry"
flat = true

[node name="mainMenu" type="Button" parent="CanvasLayer"]
margin_left = 140.0
margin_top = 354.0
margin_right = 338.0
margin_bottom = 447.0
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.560784, 0.560784, 0.560784, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.305882, 0.305882, 1 )
enabled_focus_mode = 0
text = "Main Menu"
flat = true

[node name="quit" type="Button" parent="CanvasLayer"]
margin_left = 140.0
margin_top = 452.0
margin_right = 338.0
margin_bottom = 545.0
focus_mode = 0
theme = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0.498039, 0.0509804, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 0.254902, 0.254902, 0.254902, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[connection signal="pressed" from="CanvasLayer/retry" to="." method="_retry"]
[connection signal="pressed" from="CanvasLayer/mainMenu" to="." method="_on_mainMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/quit" to="." method="_on_quit_pressed"]
